web-infras/parser/tests/fixtures/babel/es2017/async-functions/await-inside-parameters-of-nested-async-arrow-function/output.txt
[SyntaxError]: await expression can not used in parameter list (2,14)
2|  async (x = await 2) => {};
 |            ^
